Update configuration and security settings

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,19 @@
 # アプリケーション設定
-SECRET_KEY=your_secret_key_here
-ENVIRONMENT=development
-DEBUG=True
+# SECRET_KEYが設定されていない場合、自動的にランダム生成されます
+# 本番環境では以下のコマンドで生成したキーを使用してください：
+# python -c "from app.core.security import generate_secret_key; print(generate_secret_key())"
+SECRET_KEY=
+ENVIRONMENT=production
+DEBUG=False
 
 # OpenAI API設定
-OPENAI_API_KEY=your_openai_api_key
+# 実際のAPIキーは.envファイルに設定してください
+OPENAI_API_KEY=your_openai_api_key_here
 
 # データベース設定
+# Railway.appでは自動的に設定されます
 DATABASE_URL=sqlite:///./app.db
-
-# Square API設定
-SQUARE_ACCESS_TOKEN=your_square_access_token
-SQUARE_ENVIRONMENT=sandbox  # sandbox or production
-
-# WordPress API設定
-WP_API_URL=your_wordpress_api_url
-WP_USERNAME=your_wordpress_username
-WP_APP_PASSWORD=your_wordpress_app_password
-
-# Google OAuth設定
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # スクレイピング設定
 MAX_SCRAPE_PAGES=5
-SCRAPE_DELAY=2  # seconds between requests
+SCRAPE_DELAY=5  # seconds between requests
