--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.109.0
-uvicorn==0.27.0
+uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
@@ -11,7 +11,8 @@ python-slugify==8.0.1
 requests==2.31.0
 python-dotenv==1.0.1
 pydantic==2.6.1
+pydantic-settings==2.1.0
 alembic==1.13.1
+psycopg2-binary==2.9.9
 aiosqlite==0.19.0
-google-auth-oauthlib==1.2.0
 reppy==0.4.14
