--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ pydantic-settings==2.1.0
 alembic==1.13.1
 psycopg2-binary==2.9.9
 aiosqlite==0.19.0
-reppy==0.4.14
+robotexclusionrulesparser==1.7.1
