Update alembic configuration to use environment variables

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlite+aiosqlite:///./app.db
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [loggers]
 keys = root,sqlalchemy,alembic
@@ -28,7 +28,7 @@ qualname = alembic
 
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
+args = (sys.stdout,)
 level = NOTSET
 formatter = generic
 
