--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+asyncpg://postgres:xfHDrsvUdxoViJEhHfmwSjSJGrrumQqA@hopper.proxy.rlwy.net:35226/railway
+
 
 [loggers]
 keys = root,sqlalchemy,alembic
