Update API and environment configuration

--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,21 @@
 # 本番環境では以下のコマンドで生成したキーを使用してください：
 # python -c "from app.core.security import generate_secret_key; print(generate_secret_key())"
 SECRET_KEY=
-ENVIRONMENT=production
-DEBUG=False
+ENVIRONMENT=development
+DEBUG=true
 
 # OpenAI API設定
 # 実際のAPIキーは.envファイルに設定してください
 OPENAI_API_KEY=your_openai_api_key_here
 
+# WordPress API設定（オプション）
+WP_API_URL=
+WP_USERNAME=
+WP_APP_PASSWORD=
+
 # データベース設定
 # Railway.appでは自動的に設定されます
-DATABASE_URL=sqlite:///./app.db
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/railway
 
 # スクレイピング設定
 MAX_SCRAPE_PAGES=5
