--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,9 @@
 [build]
-builder = "DOCKERFILE"
+builder = "NIXPACKS"
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
+startCommand = "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/v1/health"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
