--- a/render.yaml
+++ b/render.yaml
@@ -10,13 +10,10 @@ services:
         value: 10000
       - key: ENVIRONMENT
         value: production
-      - key: DATABASE_URL
-        fromDatabase:
-          name: seo-content-generator-db
-          property: connectionString
+    dependsOn:
+      - postgres
 
 databases:
-  - name: seo-content-generator-db
+  - name: postgres
     databaseName: seo_content_db
-    user: seo_content_user
-    ipAllowList: []
+    plan: free
