--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,10 @@ services:
         value: 10000
       - key: ENVIRONMENT
         value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
     dependsOn:
       - postgres
 
