--- a/render.yaml
+++ b/render.yaml
@@ -23,11 +23,11 @@ services:
   - type: web
     name: seo-content-generator-frontend
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
     staticPublishPath: ./frontend/dist
     envVars:
       - key: VITE_API_URL
-        value: https://seo-content-generator-api-jjtm.onrender.com
+        value: https://seo-content-generator-jjtm.onrender.com
     headers:
       - path: /*
         name: Cache-Control
