fix: Update API endpoint and add SPA routing configuration

--- a/render.yaml
+++ b/render.yaml
@@ -23,7 +23,7 @@ services:
   - type: web
     name: seo-content-generator-frontend
     env: static
-    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build && cp _redirects dist/
     staticPublishPath: ./frontend/dist
     envVars:
       - key: VITE_API_URL
@@ -32,6 +32,10 @@ services:
       - path: /*
         name: Cache-Control
         value: no-cache
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
 
 databases:
   - name: seo-content-generator-db
