fix: Update registration to use direct fetch API and fix SPA routing

--- a/render.yaml
+++ b/render.yaml
@@ -23,7 +23,7 @@ services:
   - type: web
     name: seo-content-generator-frontend
     env: static
-    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build && cp _redirects dist/
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
     staticPublishPath: ./frontend/dist
     envVars:
       - key: VITE_API_URL
