--- a/render.yaml
+++ b/render.yaml
@@ -32,10 +32,21 @@ services:
       - path: /*
         name: Cache-Control
         value: no-cache
+      - path: /*
+        name: Access-Control-Allow-Origin
+        value: "*"
     routes:
       - type: rewrite
         source: /*
         destination: /index.html
+      - type: redirect
+        source: /login
+        destination: /
+        status: 200
+      - type: redirect
+        source: /register
+        destination: /
+        status: 200
 
 databases:
   - name: seo-content-generator-db
