--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,22 @@ services:
         sync: false
     dependsOn:
       - seo-content-generator-db
+    headers:
+      - path: /*
+        name: Access-Control-Allow-Origin
+        value: "https://seo-content-generator-frontend.onrender.com"
+      - path: /*
+        name: Access-Control-Allow-Methods
+        value: "GET, POST, PUT, DELETE, OPTIONS"
+      - path: /*
+        name: Access-Control-Allow-Headers
+        value: "Content-Type, Authorization, X-Requested-With, Accept, Origin"
+      - path: /*
+        name: Access-Control-Allow-Credentials
+        value: "true"
+      - path: /*
+        name: Access-Control-Max-Age
+        value: "86400"
 
   - type: web
     name: seo-content-generator-frontend
